# DeepUQ

./: CHANGELOG.md  README.md  defaults.py  pyproject.toml
.github/workflows/: lint.yml  test.yaml
data/: static_hierarchical_df.csv
deepuq/data/: data.py
deepuq/scripts/: DeepEnsemble.py  DeepEvidentialRegression.py
deepuq/train/: train.py
deepuq/utils/: config.py  defaults.py
notebooks/: DeepEnsemble.ipynb  DeepEnsemble_linefit.ipynb  DeepEnsemble_train_and_validate.ipynb  MSE_and_other_losses.ipynb  SBI.ipynb  SBI_hierarchical_csv.ipynb  SBI_linefit.ipynb  conformal_linefit.ipynb  ensemble_validation.ipynb  epistemic_by_epoch.ipynb  error_propagation_demonstration.ipynb  fig1.ipynb  load_CNN_chk.ipynb  model_validation.ipynb  mountain_sigma.ipynb  numpyro_iterative_dataset_varying_noise.ipynb  numpyro_linefit.ipynb  pendulum_error_one_moment_in_time_DeepEnsemble.ipynb  pendulum_one_time_hierarchical.ipynb  sampling_numpyro.ipynb  save_data.ipynb  save_dataframe.ipynb  save_dataframe_linefit.ipynb  save_images_2D.ipynb  sigma_in_sigma_out.ipynb  test.ipynb  unreasonable_DER_linefit.ipynb  unreasonable_DER_linefit_generative_data.ipynb
paper/: paper.bib  paper.md
src/analyze/: __init__.py  analyze.py
src/client/: client.py
src/data/: __init__.py  data.py
src/models/: __init__.py  models.py
src/scripts/: Aleatoric.py  AleatoricComparison.py  AleatoricInits.py  AleatoricNHidden.py  Aleatoric_and_inits.py  AleatoricandEpistemic.py  DeepEnsemble.py  DeepEvidentialRegression.py  Epistemic.py  ExperimentalExpectedSigmaTest.py  LossFunctions.py  ParityPlotTest.py  ParitySigma.py  analysis.py  dataset_prep.py  evaluate.py  evaluate_uncert.py  io.py  models.py  train.py  utils.py
src/scripts/old_analysis/: Aleatoric.py  AleatoricNHidden.py  Aleatoric_and_inits.py
src/tex/: ms.tex
src/train/: train.py
src/utils/: challenge_utilities.py  config.py  defaults.py  defaults_DE.py  defaults_DER.py
test/: test_Aleatoric.py  test_Analyze.py  test_DeepEnsemble.py  test_DeepEvidentialRegression.py  test_data.py  test_example.py  test_io.py
