[tool.poetry]
name = "DeepUQ"
packages = [{include = "*", from="src"}]
version = "0.1.0"
description = "a package for investigating and comparing ML model's predictive uncertainties"
authors = ["beckynevin <beckynevin@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
arviz = "^0.15.1"
corner = "^2.2.2"
scikit-learn = "^1.3.0"
graphviz = "^0.20.1"
seaborn = "^0.12.2"
torch = "^2.0.1"
pytest-cov = "^4.1.0"
deepbench = "^0.2.2"
sbi = "^0.22.0"
h5py = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
