[tool.poetry]
name = "DeepUQ"
packages = [{include = "*", from="src"}]
version = "0.1.0"
description = "a package for investigating and comparing ML model's predictive uncertainties"
authors = ["beckynevin <beckynevin@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
UQensemble = "src.scripts.DeepEnsemble:main"
UQder = "src.scripts.DeepEvidentialRegression:main"
inoutaleatoric = "src.scripts.ParitySigma:main"
aleatoric = "src.scripts.Aleatoric:main"
aleatoricinits = "src.scripts.Aleatoric_and_inits:main"
alep = "src.scripts.AleatoricandEpistemic:main"
loss = "src.scripts.LossFunctions:main"
parity = "src.scripts.ParityPlotTest:main"


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
torch = "^2.0.1"
h5py = "^3.10.0"
deepbench = "^0.2.3"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
pytest = "^7.3.2"
pre-commit = "^3.7.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
